Suffering. Trying to learn how to add text animation with canvas

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <h1>Text Animation Tests</h1>
-        <button onClick="textAnimation()">Start</button>
+        <canvas id="myCanvas"></canvas>
         <script src="script.js"></script>
     </body>
 </html>
