--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <div id="grid-container">
-        </div>
+            <canvas id="Screen"></canvas>
     </body>
 </html>
