--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="script.js"></script>
     </head>
     <body>
-            <canvas id="Screen"></canvas>
+        <div id="screen">
+        </div>
+        <script src="./script.js"></script>
     </body>
 </html>
